# umadb

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md
.github/workflows/: build-and-release-python-client-wheels-and-sdist.yml  build-and-release-server-binaries-and-docker-images.yml  python-client.yml  release.yml  wip-publish-crate.yml
tests-integration/: Cargo.toml
umadb/: Cargo.toml
umadb-benches/: Cargo.toml
umadb-benches/benches/: event_leaf_node_bench.rs  grpc_append_bench.rs  grpc_append_bench_plot.py  grpc_append_cond_bench.rs  grpc_append_cond_bench_plot.py  grpc_append_with_readers_bench.rs  grpc_append_with_readers_bench_plot.py  grpc_read_bench.rs  grpc_read_bench_plot.py  grpc_read_cond_bench.rs  grpc_read_cond_bench_plot.py  grpc_read_flame.rs  grpc_read_with_writers_bench.rs  grpc_read_with_writers_bench_plot.py  header_node_bench.rs  mvcc_commit_bench.rs  mvcc_commit_flame.rs  mvcc_commit_flame_at_large_volume.rs  throughput_vs_volume.rs
umadb-benches/src/: lib.rs
umadb-client/: Cargo.toml
umadb-core/: Cargo.toml
umadb-core/src/: common.rs  db.rs  events_tree.rs  events_tree_nodes.rs  free_lists_tree_nodes.rs  header_node.rs  lib.rs  mvcc.rs  node.rs  page.rs  pager.rs  tags_tree.rs  tags_tree_nodes.rs
umadb-dcb/src/: lib.rs
umadb-proto/: Cargo.toml  build.rs
umadb-python/: Cargo.toml  README.md  pyproject.toml
umadb-python/python/umadb/: __init__.py
umadb-server/: Cargo.toml
umadb-server/src/: lib.rs
